# mai-k304-prog

./: README.md
sem-01/dop-01-v-13/: CMakeLists.txt  README.md
sem-01/dop-01-v08/: CMakeLists.txt
sem-01/lab-01-v-15/: README.md
sem-01/lab-03-v-15/: CMakeLists.txt
sem-02/dop-01-v23/: CMakeLists.txt
sem-02/lab-01-v-15/: CMakeLists.txt
sem-02/lab-01-v15/: CMakeLists.txt
sem-02/lab-02-v-15/: README.md
sem-02/lab-02-v15/: CMakeLists.txt
sem-03/lab-01-v01/: CMakeLists.txt
sem-03/lab-01-v01/docs/: LR1_Dudorov_Tereschuk.docx
sem-03/lab-01-v01/docs/Вывод график/: Time25.txt  Time30.txt  Time45.txt  Time50.txt
sem-03/lab-01-v01/src/: Da_eto_nasha_laba3.cpp  function.cpp  function.h  main.cpp
sem-03/lab-02-v-01/: CMakeLists.txt
sem1-dop1-v13/: CMakeLists.txt
sem1-dop1-v13/scr/: main.cpp
sem1-dop1-v8/: README.md
sem1-dop1-v8/docs/: dop 1-2.drawio  Тесты программ1.docx
sem1-dop1-v8/src/: main.cpp
sem1-lab1-v15/: CMakeLists.txt
sem1-lab1-v15/docs/: Отчет по лабораторной работе1.docx  Псевдокод.docx
sem1-lab1-v15/src/: main.cpp
sem1-lab2-v15/: CMakeLists.txt  README.md
sem1-lab2-v15/docs/: Infa_laba_2 (3).docx  Блок схема.drawio  Задания.doc  Псевдокод.docx
sem1-lab2-v15/src/: main.cpp
sem1-lab3-v15/: CMakeLists.txt  README.md
sem1-lab3-v15/docs/: Отсчёт по лабе 3_1.docx  ПСЕВДОКОД 3003.docx
sem2-dop1-v23/: README.md
sem2-dop1-v23/src/: main.cpp
sem2-lab1-v15/: README.md
sem2-lab1-v15/docs/: Lab_1 (2 sem) Блок схема.drawio  Отчёт по Lab_1 (2 sem).docx
sem2-lab1-v15/src/: correct_01.txt  incorrect_02.txt
sem2-lab2-v15/: CMakeLists.txt
sem2-lab2-v15/docs/: Flowchart.drawio
sem2-lab3-v15/: CMakeLists.txt  README.md
sem2-lab3-v15/docs/: Flowchart.drawio  Отчёт по Lab_2 (2 sem) часть 1.docx
sem3-lab1-v1/: CMakeLists.txt
sem3-lab1-v1/src/: Input.txt  function.h  main.cpp  main.py
(+57 files in other folders)
